--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "nama : Naufal Rifki Ramadhan\r NIM  : 231058011",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node buggy server node js"
   },
   "keywords": [],
   "author": "",
